# mychatai

./: .gitignore  README.md  pyproject.toml
mychatai/: __init__.py  chat_service.py  config.py  exceptions.py  prompts.py  system_prompt.txt
mychatai/clients/: base.py  claude.py  deepseek.py  gemini.py  ollama.py  openai.py
mychatai/utils/: display.py
scripts/: ask.py  serve_gradio.py
