[build-system]
# Hatchling ≥ 1.24 has full PEP 660 editable-install support
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mychatai"
version = "0.1.0"
description = "Unified chat-LLM orchestration layer (OpenAI + Ollama + claude + gemini)"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
# ✱ If README.md exists keep the next line.  
#   Otherwise comment it out or point to an existing file
readme = "README.md"

license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "openai>=1.28",
  "httpx>=0.27",
  "pydantic>=2.11",          # keep latest core
  "pydantic-settings>=2.1",  # new line 🆕
  "click>=8.1",
]


[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3",
  "ruff",
  "mypy",
]

[project.scripts]
# `pip install -e .` will register this console-script entry-point
ask = "scripts.ask:main"
